--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </div>
 
    <footer>
-            Clarence Franklin | 2025 | Per Scholas
+            © Clarence Franklin | 2025 | Per Scholas
         </footer>
 </body>
 </html>
